syntax = "proto3";

package rpc;

service ULTNode {
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse) {}
  rpc SubmitTransaction(SubmitTransactionRequest) returns (SubmitTransactionResponse) {}
}

message HealthCheckRequest {
  string IP = 1;     // IP address of the request node
  string NodeID = 2; // NodeID (public key) of the request node
}
message HealthCheckResponse {
  string IP = 1;     // IP address of the response node
  string NodeID = 2; // NodeID (public key) of the response node
}

enum TransactionStatusEnum {
  REJECTED = 0;  // rejected because of some errors
  ACCEPTED = 1;  // transaction accepted but not yet confirmed by consensus
  CONFIRMED = 2; // transaction is valid and confirmed by consensus
}

message SubmitTransactionRequest {
  // transaction data in pb format
  bytes Data = 1;
  // digital signature of the data signed by 
  // the source account private key
  string Signature = 2;
}

message SubmitTransactionResponse {
  TransactionStatusEnum TransactionStatus = 1;
  // the transaction hash is only valid when the response
  // status is ACCEPTED or CONFIRMED 
  string TransactionHash = 2;
  // error message for REJECTED transaction
  string ErrorMessage = 3;
}
